source/blender/editors/interface/interface_handlers.c
@@ -8136,7 +8136,10 @@ static int ui_handle_button_event(bContext *C, const wmEvent *event, uiBut *but)
 					/* Drag on a hold button (used in the toolbar) now opens it immediately. */
 					if (data->hold_action_timer) {
 						if (but->flag & UI_SELECT) {
-							if (len_manhattan_v2v2_int(&event->x, &event->prevx) >= WM_EVENT_CURSOR_MOTION_THRESHOLD) {
+							if (len_manhattan_v2v2_int(&event->x, &event->prevx) <= WM_EVENT_CURSOR_MOTION_THRESHOLD) {
+								/* pass */
+							}
+							else {
 								WM_event_remove_timer(data->wm, data->window, data->hold_action_timer);
 								data->hold_action_timer = WM_event_add_timer(data->wm, data->window, TIMER, 0.0f);
 							}
