source/blender/makesdna/DNA_userdef_types.h
@@ -723,8 +723,8 @@ typedef struct UserDef {
 	float gpencil_new_layer_col[4];
 
 	short tweak_threshold;
+	char move_threshold;
 	char navigation_mode;
-	char _pad10;
 
 	char font_path_ui[1024];
 	char font_path_ui_mono[1024];
