source/blender/windowmanager/WM_types.h
@@ -499,8 +499,10 @@ typedef struct wmEvent {
  * Values below are ignored when detecting if the user interntionally moved the cursor.
  * Keep this very small since it's used for selection cycling for eg,
  * where we want intended adjustments to pass this threshold and select new items.
+ *
+ * Always check for <= this value since it may be zero.
  */
-#define WM_EVENT_CURSOR_MOTION_THRESHOLD (3 * U.dpi_fac)
+#define WM_EVENT_CURSOR_MOTION_THRESHOLD ((float)U.move_threshold * U.dpi_fac)
 
 /* ************** custom wmEvent data ************** */
 typedef struct wmTabletData {
